--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -9,9 +9,13 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "firebase": "^9.17.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
