--- a/movie-app/.gitignore
+++ b/movie-app/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-
+/node-modules
+/dist
 /.pnp
 .pnp.js
 
@@ -17,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.parcel-cache
+
 
 npm-debug.log*
 yarn-debug.log*
