--- a/movie-app/.gitignore
+++ b/movie-app/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node-modules
+/node_modules
 /dist
 /.pnp
 .pnp.js
@@ -19,7 +19,6 @@
 .env.test.local
 .env.production.local
 .parcel-cache
-
 
 npm-debug.log*
 yarn-debug.log*
