--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movie-app",
+  "homepage": "https://ayushrastogi689.github.io/moviez",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
