--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-app",
-  "homepage": "https://ayushrastogi689.github.io/moviez",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
